# spy-iron-condor-trading

./: .gitignore  AlpacaGetData.py  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  INTEGRATION_MODULE.md  PolyOptionsData.py  README.md  ROADMAP.md  TASKS.md  backtest_engine.py  broker.py  config.py  config.template.py  construct_15m_foundation.py  convertpytotxt.py  extract_canonical_primitives.py  generate_antigrav_instructions.py  generate_major_updates.py  generate_remaining_rules.py  main.py  metrics.py  options_strategy.py  polygon_client.py  project_structure_setup.py  pyproject.toml  requirements.txt  run_engine_trace_one_day.py  run_live_alpaca.py  setup_files.sh  task.md  verify_fix.py
.claude/: settings.local.json
analytics/: __init__.py  audit_logger.py  carry_model.py  divergence.py  gaps.py  indicators.py  metrics.py  realized_vol.py  skew.py
audit/: contract_snapshot.py  decision_trace_logger.py  due_diligence_dag.dot  export_learned_conditions.py  generate_audit_packet.py  generate_decision_factor_attribution.py
colab/: A100_SWEEP_STRATEGY.md  README_COLAB.md  condor_brain_sweep.py  spyt_cloud_optimizer.ipynb
core/: backtest_engine.py  benchmark_cpu.py  broker.py  config.py  config.template.py  config_optimized.json  data_validator.py  dto.py  engine.py  liquidity_gate.py  main.py  optimizer.py  risk_manager.py  trade_decision.py  types.py
data/: spy_training_data.csv
data_factory/: AlpacaGetData.py  SyntheticOptionsEngine.py  alpaca_data_client.py  aux_feeds.py  compute_historical_greeks.py  data_engine.py  option_chain.py  (+11 more)
(+316 files in other folders)
